--- a/plist1.plist
+++ b/plist1.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.dl.dropboxusercontent.com/s/d934e1fi1v47sis/Acoustic.ipa</string>
+					<string>https://ia601504.us.archive.org/3/items/London_201808/London.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
